2012-08-02  Ivan Maidanski  <ivmai@users.sourceforge.net>

	Add missing function prototypes per issue [#1305].

	* include/process.h [#ifndef _WPROCESS_DEFINED]
	(_wexecl, _wexecle, _wexeclp, _wexeclpe, _wexecv, _wexecve)
	(_wexecvp, _wexecvpe, _wspawnl, _wspawnle, _wspawnlp, _wspawnlpe)
	(_wspawnv, _wspawnve, _wspawnvp, _wspawnvpe): Declare them.

2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	Add function prototype declarations per issue [#1293].

	* include/stdio.h (_lock_file, _unlock_file): Declare them.

2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	Apply some more rigorous __STRICT_ANSI__ filtering.

	* include/stdio.h (_getws, _putws, _wfdopen, _wfopen) 
	(_wfreopen, _wfsopen, _wtmpnam, _wtempnam, _wrename, _wremove)
	(_wperror, _wpopen): Do not declare these functions unless...
	[#ifndef __STRICT_ANSI__]: ...this is satisfied.

2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	Add string to 64-bit integer conversion function prototypes.

	* include/stdlib.h (_strtoi64, _strtoi64_l, _strtoui64, _strtoui64_l)
	(_wcstoi64, _wcstoi64_l, _wcstoui64, _wcstoui64_l): Declare them.
	* include/wchar.h (_wcstoi64, _wcstoi64_l, _wcstoui64, _wcstoui64_l):
	Likewise; these are duplicates of the <stdlib.h> declarations.

2012-08-01  Earnie Boyd  <earnie@users.sourceforge.net>

	Update for _WIN64 exception handler readiness.

	* include/excpt.h [_WIN64] (__try1, __except1): Add alternative inline
	assembly code implementation, based on X86-64 architecture.

2012-07-30  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct missing inclusion of <_mingw.h>.

	* include/stdint.h: Add omitted #include; all mingwrt headers are
	expected to include this; it is required to define __int64.

2011-11-30  Ozkan Sezer  <sezero@users.sourceforge.net>

	Correct prototypes for _wfindfirst()/_wfindnext() function family.

	* include/io.h (_wfindfirst, _wfindfirst32, _wfindfirsti64)
	(_wfindfirst32i64, _wfindfirst64i32): Return type changed to intptr_t.