@@ -29,7 +29,9 @@
  *       are semantically identical, with a limit of 259 characters for the
  *       path name, plus one for a terminating NUL, for a total of 260.
  */
-#define PATH_MAX	260
+#ifndef __STRICT_ANSI__
+# define PATH_MAX	260
+#endif
 
 /*
  * Characteristics of the char data type.
